[tool.poetry]
name = "spectrumov"
version = "0.1.0"
description = ""
authors = ["dylan-robins <dylan.robins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.4.2"
scipy = "^1.17.0"
matplotlib = "^3.10.8"
opencv-python = "^4.13.0.92"
tqdm = "^4.67.3"

[tool.poetry.scripts]
spectrumov = "spectrumov.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
